--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 Catch[[:space:]]The[[:space:]]Criminal/RAJESH[[:space:]]IMAGE.rar filter=lfs diff=lfs merge=lfs -text
 Catch[[:space:]]The[[:space:]]Criminal/Samar[[:space:]]Image.rar filter=lfs diff=lfs merge=lfs -text
+Catch[[:space:]]The[[:space:]]Criminal/*.rar filter=lfs diff=lfs merge=lfs -text
